--- a/app/templates/admin/templates/register.html
+++ b/app/templates/admin/templates/register.html
@@ -31,8 +31,8 @@
             <tbody>
                 <tr>
                   <form action="#">
-                      <td>Arthur</td>
-                      <td>Dantas</td>
+                      <td>Henrique</td>
+                      <td>Timóteo</td>
                       <td>arthur.dantas</td>
                       <td>arthur.dantas@unimedrecife.com.br</td>
                       <td>08/06/2020</td>
