--- a/app/templates/public/templates/index.html
+++ b/app/templates/public/templates/index.html
@@ -7,7 +7,7 @@
             <h1 class="display-4">Bem vindo a plataforma da <span style="color: green;" >RockeTI!</span></h1>
             <p class="lead">Aqui você terá alguns recursos para agilizar o seu atendimento, use e abuse ;) </p>
             <hr class="my-4">
-            <p>Caso tenha alguma sugestão, por favor, entre em contato...</p>
+            <p> ARGRAAAAAAAAA  Caso tenha alguma sugestão, por favor, entre em contato...</p>
             <a class="btn btn-primary btn-lg" href="#" role="button">Enviar Sugestão</a>
           </div>
     </div>
