changed dashboard layout and added authentication into admin route

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -59,3 +59,9 @@ footer {
   #pdf {
       max-width: 150px ;
   }
+
+#sidebarMenu {
+    padding-right: 20px;
+    padding-top: 20px;
+    min-height: calc(100vh - 50px);
+}
