--- a/app/templates/public/templates/ips.html
+++ b/app/templates/public/templates/ips.html
@@ -13,7 +13,7 @@
         <div id="card" class="card" style="width: 1444px; margin: 0 auto; visibility: hidden">
             <h1 style="text-align: center; color: rgb(48, 9, 119)">Consulta dos IPS</h1>
             <hr>
-            <table id="ipTable" class="table" style="width:70%;  margin: auto; ">
+            <table id="ipTable" class="table table-striped" style="margin: auto;">
                 <thead>
                     <tr>
                         <th>Hostname</th>
